--- a/RAG_Evaluation.ipynb
+++ b/RAG_Evaluation.ipynb
@@ -57,6 +57,53 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Choose BERTScore as the best RAG evaluation metric because it focuses on semantic similarity. The following examples demonstrate how BLEU score and BERTScore perform in comparison."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BLEU Score: 0.04\n"
+     ]
+    }
+   ],
+   "source": [
+    "from nltk.translate.bleu_score import sentence_bleu, SmoothingFunction\n",
+    "\n",
+    "def calculate_bleu(reference_text, generated_text):\n",
+    "    \"\"\"\n",
+    "    Calculate BLEU score for generated text compared to a reference.\n",
+    "\n",
+    "    Parameters:\n",
+    "    - reference_text: List of words in the reference text.\n",
+    "    - generated_text: List of words in the generated text.\n",
+    "\n",
+    "    Returns:\n",
+    "    - BLEU score.\n",
+    "    \"\"\"\n",
+    "    smooth = SmoothingFunction().method1  # Smoothing to handle 0 counts\n",
+    "    score = sentence_bleu([reference_text], generated_text, smoothing_function=smooth)\n",
+    "    return score\n",
+    "\n",
+    "\n",
+    "# Example usage\n",
+    "reference_text = \"The sun rose over the mountains\".split()\n",
+    "generated_text = \"The sunrise lit up the mountain peaks.\".split()\n",
+    "\n",
+    "bleu_score = calculate_bleu(reference_text, generated_text)\n",
+    "print(f\"BLEU Score: {bleu_score:.2f}\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
